--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -81,3 +81,10 @@ select {
   display: block;
   width: 95%;
 }
+
+/* Media query pour les écrans de moins de 768px (tablettes et mobiles) */
+@media (max-width: 768px) {
+  .element {
+    width: calc(50% - 20px); /* Pour les écrans plus petits, 2 par ligne */
+  }
+}
