--- a/src/styles.css
+++ b/src/styles.css
@@ -1,21 +1,31 @@
-/* You can add global styles to this file, and also import other style files */
 body {
-  font-family: Arial, sans-serif;
-  background-image: url("/assets/background.jpg");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  margin: 5%;
-  padding: 0;
+  font-family: "Arial", sans-serif;
+  background-color: #1c1c1c; /* Gris foncé pour le fond */
+  color: #ddd;
+  margin: 0;
+  padding: 20px;
   text-align: center;
 }
 
 h1,
 p {
-  background-color: #333;
   color: #fff;
   padding: 20px;
   text-align: center;
-  border-radius: 3px;
+  border-radius: 5px;
+}
+
+h1 {
+  margin-bottom: 20px; /* Espacement entre h1 et p */
+  font-size: 2em; /* Taille plus grande pour h1 */
+}
+
+p {
+  margin-bottom: 10px; /* Espacement entre paragraphes */
+  font-size: 1em;
+  line-height: 1.5; /* Ajustement de l'interligne pour une meilleure lisibilité */
+}
+
+.header {
+  background: linear-gradient(145deg, #656565, #4a4a4a);
 }
