--- a/src/styles.css
+++ b/src/styles.css
@@ -2,8 +2,6 @@ body {
   font-family: "Arial", sans-serif;
   background-color: #1c1c1c; /* Gris foncé pour le fond */
   color: #ddd;
-  margin: 0;
-  padding: 20px;
   text-align: center;
 }
 
@@ -28,4 +26,7 @@ p {
 
 .header {
   background: linear-gradient(145deg, #656565, #4a4a4a);
+  border-radius: 5px;
+  width: 90%;
+  margin: 0 auto;
 }
